@@ -14,39 +14,77 @@
  * limitations under the License.
  */
 
+configurations {
+  osgiModule
+  testCompileOnly.extendsFrom osgiModule
+}
+
 dependencies {
-  ext {
-    paxExamVersion = '3.5.0'
-    urlVersion = '1.6.0'
-    felixVersion = '4.4.0'
+  osgiModule project(':api')
+  osgiModule project(':core')
+  osgiModule project(':impl')
+  osgiModule project(':xml')
+  osgiModule project(':107')
+  osgiModule project(':transactions')
+
+  osgiModule "javax.cache:cache-api:$parent.jcacheVersion"
+  osgiModule ('org.codehaus.btm:btm:2.1.4') {
+    exclude group:'org.slf4j', module:'slf4j-api'
   }
 
-  testCompile project(':impl'), project(':xml'), project(':107'),
-          'junit:junit:4.11',
-          "org.ops4j.pax.exam:pax-exam-junit4:$paxExamVersion",
-          "org.apache.felix:org.apache.felix.framework:$felixVersion",
-          "javax.cache:cache-api:$parent.jcacheVersion"
+  osgiModule project(':dist')
 
-  testRuntime "org.slf4j:slf4j-simple:$parent.slf4jVersion",
-          "org.ops4j.pax.exam:pax-exam-container-native:$paxExamVersion",
-          "org.ops4j.pax.exam:pax-exam-link-mvn:$paxExamVersion",
-          "org.ops4j.pax.url:pax-url-aether:$urlVersion"
+  osgiModule "org.slf4j:slf4j-simple:$parent.slf4jVersion"
+  osgiModule 'org.apache.felix:org.apache.felix.scr:2.1.6'
 
 
+
+  testImplementation 'org.apache.felix:org.apache.felix.framework:6.0.1'
+  testImplementation ('org.ops4j.pax.exam:pax-exam-junit4:4.12.0') {
+    exclude group:'org.slf4j', module:'slf4j-api'
+  }
+
+  testRuntimeOnly ('org.ops4j.pax.exam:pax-exam-container-native:4.12.0') {
+    exclude group:'org.slf4j', module:'slf4j-api'
+  }
+  testRuntimeOnly ('org.ops4j.pax.exam:pax-exam-link-mvn:4.12.0') {
+    exclude group:'org.slf4j', module:'slf4j-api'
+  }
+  testRuntimeOnly ("org.ops4j.pax.url:pax-url-wrap:2.4.5") {
+    exclude group:'org.slf4j', module:'slf4j-api'
+  }
+}
+
+configurations.all {
+   resolutionStrategy {
+     force 'org.ops4j.base:ops4j-base-lang:1.5.0'
+     force 'org.ops4j.base:ops4j-base-net:1.5.0'
+     force 'org.ops4j.base:ops4j-base-util-property:1.5.0'
+   }
 }
 
 sourceSets {
   test {
-    // Needed for PaxExam which makes the dynamic bundle load content of a single dir
-    // matching the package of the test class
-    output.resourcesDir = "$buildDir/classes/test"
+    // Needed to allow PaxExam to see the test resources
+    output.resourcesDir = java.outputDir
   }
 }
 
-test {
-  systemProperty 'ehcache.osgi.jar', project(':dist').jar.archivePath.getPath()
-  systemProperty 'ehcache.osgi.jcache.version', parent.jcacheVersion
-  systemProperty 'ehcache.osgi.slf4j.version', parent.slf4jVersion
+configurations.osgiModule.dependencies.withType(ProjectDependency).forEach {
+  test.dependsOn it.dependencyProject.tasks.jar
 }
 
-test.dependsOn ':dist:jar'
+test {
+  if (testJava.javaVersion.isJava9Compatible()) {
+    //Deploying the jaxb-runtime as an OSGi module is currently impossible - don't ask... sigh.
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+    //https://issues.apache.org/jira/browse/FELIX-5727 - framework extensions in Java 9 are ugly
+    jvmArgs += ['--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED']
+  }
+}.doFirst {
+  if (testJava.javaVersion.isJava11Compatible()) throw new StopExecutionException("OSGi Tests Not Working in Java 11")
+
+  configurations.osgiModule.resolvedConfiguration.resolvedArtifacts.forEach({
+    systemProperty "$it.moduleVersion.id.module:osgi-path", it.file
+  })
+}
